--- a/config/sales-workshops-w01-s020/inclusion/delivery.yml
+++ b/config/sales-workshops-w01-s020/inclusion/delivery.yml
@@ -29,6 +29,8 @@ spec:
           appliveview-sample/app-live-view-appflavours-boot
           appliveview-sample/app-live-view-systemproperties
         developer.conventions/target-containers: workload
+        kubectl.kubernetes.io/last-applied-configuration: |
+          {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"autoscaling.knative.dev/min-scale":"5"},"labels":{"app.kubernetes.io/part-of":"inclusion","apps.tanzu.vmware.com/workload-type":"web"},"name":"inclusion","namespace":"sales-workshops-w01-s020"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"}]},"params":[{"name":"api_descriptor","value":{"description":"A set of API endpoints to manage the resources within the inclusion app.","location":{"path":"/v3/api-docs"},"owner":"team-vmware-tanzu-se","system":"inclusion-system","type":"openapi"}}],"serviceClaims":[{"name":"db","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"db-binding-compatible"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/tsalm-pivotal/emoji-inclusion.git"}}}}
         services.conventions.apps.tanzu.vmware.com/postgres: postgresql/42.3.8
       labels:
         app.kubernetes.io/component: run
