--- a/config/prod-w01-s002/inclusion/delivery.yml
+++ b/config/prod-w01-s002/inclusion/delivery.yml
@@ -6,6 +6,7 @@ metadata:
     ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
     ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
   labels:
+    apis.apps.tanzu.vmware.com/register-api: "true"
     app.kubernetes.io/part-of: inclusion
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
