--- a/config/prod-w01-s002/inclusion/serviceclaims.yml
+++ b/config/prod-w01-s002/inclusion/serviceclaims.yml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     autoscaling.knative.dev/min-scale: "5"
   labels:
+    apis.apps.tanzu.vmware.com/register-api: "true"
     app.kubernetes.io/part-of: inclusion
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
