--- a/config/dev-space/inclusion/serviceclaims.yml
+++ b/config/dev-space/inclusion/serviceclaims.yml
@@ -21,6 +21,7 @@ metadata:
     autoscaling.knative.dev/min-scale: "5"
     kubectl.kubernetes.io/last-applied-configuration: |
       {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"autoscaling.knative.dev/min-scale":"5"},"labels":{"apis.apps.tanzu.vmware.com/register-api":"true","app.kubernetes.io/part-of":"inclusion","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web"},"name":"inclusion","namespace":"dev-space"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"}]},"params":[{"name":"api_descriptor","value":{"description":"A set of API endpoints to manage the resources within the inclusion app.","location":{"path":"/v3/api-docs"},"owner":"team-vmware-tanzu-se","system":"emoji-world","type":"openapi"}}],"serviceClaims":[{"name":"db","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"db-binding-compatible"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/tsalm-pivotal/emoji-inclusion.git"}}}}
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     apis.apps.tanzu.vmware.com/register-api: "true"
     app.kubernetes.io/part-of: inclusion
