--- a/config/dev-space/shipping-service/serviceclaims.yml
+++ b/config/dev-space/shipping-service/serviceclaims.yml
@@ -20,6 +20,7 @@ metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
       {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{},"labels":{"app.kubernetes.io/part-of":"shipping-service","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"worker"},"name":"shipping-service","namespace":"dev-space"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"}]},"params":[{"name":"testing_pipeline_params","value":{"source-sub-path":"shipping-service"}}],"serviceClaims":[{"name":"rmq","ref":{"apiVersion":"rabbitmq.com/v1beta1","kind":"RabbitmqCluster","name":"rmq-1"}},{"name":"config-server","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"configserver-binding-compatible"}},{"name":"observability","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"observability-binding-compatible"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/tsalm-pivotal/spring-cloud-demo-tap.git"},"subPath":"shipping-service"}}}
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/part-of: shipping-service
     apps.tanzu.vmware.com/has-tests: "true"
@@ -44,6 +45,7 @@ metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
       {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{},"labels":{"app.kubernetes.io/part-of":"shipping-service","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"worker"},"name":"shipping-service","namespace":"dev-space"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"}]},"params":[{"name":"testing_pipeline_params","value":{"source-sub-path":"shipping-service"}}],"serviceClaims":[{"name":"rmq","ref":{"apiVersion":"rabbitmq.com/v1beta1","kind":"RabbitmqCluster","name":"rmq-1"}},{"name":"config-server","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"configserver-binding-compatible"}},{"name":"observability","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"observability-binding-compatible"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/tsalm-pivotal/spring-cloud-demo-tap.git"},"subPath":"shipping-service"}}}
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/part-of: shipping-service
     apps.tanzu.vmware.com/has-tests: "true"
@@ -68,6 +70,7 @@ metadata:
   annotations:
     kubectl.kubernetes.io/last-applied-configuration: |
       {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{},"labels":{"app.kubernetes.io/part-of":"shipping-service","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"worker"},"name":"shipping-service","namespace":"dev-space"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"}]},"params":[{"name":"testing_pipeline_params","value":{"source-sub-path":"shipping-service"}}],"serviceClaims":[{"name":"rmq","ref":{"apiVersion":"rabbitmq.com/v1beta1","kind":"RabbitmqCluster","name":"rmq-1"}},{"name":"config-server","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"configserver-binding-compatible"}},{"name":"observability","ref":{"apiVersion":"services.apps.tanzu.vmware.com/v1alpha1","kind":"ResourceClaim","name":"observability-binding-compatible"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/tsalm-pivotal/spring-cloud-demo-tap.git"},"subPath":"shipping-service"}}}
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/part-of: shipping-service
     apps.tanzu.vmware.com/has-tests: "true"
