--- a/config/dev-space/payment-service/serviceclaims.yml
+++ b/config/dev-space/payment-service/serviceclaims.yml
@@ -17,7 +17,8 @@ apiVersion: servicebinding.io/v1alpha3
 kind: ServiceBinding
 metadata:
   name: payment-service-config-server
-  annotations: {}
+  annotations:
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/part-of: payment-service
     apps.tanzu.vmware.com/has-tests: "true"
@@ -39,7 +40,8 @@ apiVersion: servicebinding.io/v1alpha3
 kind: ServiceBinding
 metadata:
   name: payment-service-observability
-  annotations: {}
+  annotations:
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/part-of: payment-service
     apps.tanzu.vmware.com/has-tests: "true"
