--- a/config/dev-space/csharp-weather-forecast/delivery.yml
+++ b/config/dev-space/csharp-weather-forecast/delivery.yml
@@ -8,6 +8,7 @@ metadata:
     kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
   labels:
     app.kubernetes.io/part-of: weatherforecast-csharp
+    apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/component: run
     carto.run/workload-name: csharp-weather-forecast
@@ -24,6 +25,7 @@ spec:
       labels:
         app.kubernetes.io/component: run
         app.kubernetes.io/part-of: weatherforecast-csharp
+        apps.tanzu.vmware.com/has-tests: "true"
         apps.tanzu.vmware.com/workload-type: web
         carto.run/workload-name: csharp-weather-forecast
     spec:
