--- a/config/developer-workshops-w01-s001/shipping-service/serviceclaims.yml
+++ b/config/developer-workshops-w01-s001/shipping-service/serviceclaims.yml
@@ -39,4 +39,31 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: shipping-service
+---
+apiVersion: servicebinding.io/v1alpha3
+kind: ServiceBinding
+metadata:
+  name: shipping-service-config-server
+  annotations:
+    kapp.k14s.io/change-group: servicebinding.io/ServiceBindings
+  labels:
+    apps.tanzu.vmware.com/workload-type: server
+    learningcenter.tanzu.vmware.com/component: session
+    learningcenter.tanzu.vmware.com/environment.name: developer-workshops-w01
+    learningcenter.tanzu.vmware.com/portal.name: developer-workshops
+    learningcenter.tanzu.vmware.com/session.name: developer-workshops-w01-s001
+    learningcenter.tanzu.vmware.com/session.objects: "true"
+    learningcenter.tanzu.vmware.com/workshop.name: modern-app-arch-spring-cloud-workshop
+    app.kubernetes.io/component: run
+    carto.run/workload-name: shipping-service
+spec:
+  name: config-server
+  service:
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
+    name: configserver-binding-compatible
+  workload:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: shipping-service
 
