--- a/config/developer-workshops-w01-s002/product-service-native/delivery.yml
+++ b/config/developer-workshops-w01-s002/product-service-native/delivery.yml
@@ -28,6 +28,8 @@ spec:
           spring-boot-convention/app-live-view-connector-boot
           spring-boot-convention/app-live-view-appflavours-boot
         developer.conventions/target-containers: workload
+        kubectl.kubernetes.io/last-applied-configuration: |
+          {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{},"labels":{"apps.tanzu.vmware.com/workload-type":"web"},"name":"product-service-native","namespace":"developer-workshops-w01-s002"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"},{"name":"BP_NATIVE_IMAGE","value":"true"},{"name":"BP_MAVEN_BUILD_ARGUMENTS","value":"-Pnative -Dmaven.test.skip=true --no-transfer-progress package"}]},"source":{"git":{"ref":{"branch":"developer-workshops-w01-s002"},"url":"https://gitea.emea.end2end.link/gitea_admin/product-service.git"}}}}
       labels:
         app.kubernetes.io/component: run
         apps.tanzu.vmware.com/auto-configure-actuators: "true"
