--- a/config/tap-spring-developer-workshops-w01-s004/order-service/delivery.yml
+++ b/config/tap-spring-developer-workshops-w01-s004/order-service/delivery.yml
@@ -17,6 +17,7 @@ spec:
     metadata:
       annotations:
         autoscaling.knative.dev/min-scale: "1"
+        autoscaling.knative.dev/minScale: "1"
         boot.spring.io/actuator: http://:8081/actuator
         boot.spring.io/version: 3.1.1
         conventions.carto.run/applied-conventions: |-
@@ -34,7 +35,7 @@ spec:
           spring-boot-convention/service-intent-rabbitmq
         developer.conventions/target-containers: workload
         kubectl.kubernetes.io/last-applied-configuration: |
-          {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"autoscaling.knative.dev/min-scale":"1"},"labels":{"app.kubernetes.io/part-of":"order-service","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web"},"name":"order-service","namespace":"tap-spring-developer-workshops-w01-s004"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"}]},"source":{"git":{"ref":{"branch":"tap-spring-developer-workshops-w01-s004"},"url":"https://gitea.emea.end2end.link/gitea_admin/order-service.git"}}}}
+          {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"autoscaling.knative.dev/min-scale":"1"},"labels":{"app.kubernetes.io/part-of":"order-service","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web"},"name":"order-service","namespace":"tap-spring-developer-workshops-w01-s004"},"spec":{"build":{"env":[{"name":"BP_JVM_VERSION","value":"17"}]},"params":[{"name":"annotations","value":{"autoscaling.knative.dev/minScale":"1"}}],"source":{"git":{"ref":{"branch":"tap-spring-developer-workshops-w01-s004"},"url":"https://gitea.emea.end2end.link/gitea_admin/order-service.git"}}}}
         services.conventions.carto.run/postgres: postgresql/42.6.0
         services.conventions.carto.run/rabbitmq: amqp-client/5.17.0
       labels:
