--- a/inclusion.tap-saas.timosalm.de/packages/20240113174550.0.0.yml
+++ b/inclusion.tap-saas.timosalm.de/packages/20240113174550.0.0.yml
@@ -4,7 +4,7 @@ metadata:
   name: inclusion.tap-saas.timosalm.de.20240113174550.0.0+build.ce41fff
 spec:
   refName: inclusion.tap-saas.timosalm.de
-  version: 20240113174550.0.0+build.ce41fff
+  version: 20231205012245.0.0
   releaseNotes: |
     Release v20240113174550.0.0+build.ce41fff of package inclusion.tap-saas.timosalm.de
   template:
