--- a/inclusion.tap-saas.timosalm.de/packages/20240113174550.0.0.yml
+++ b/inclusion.tap-saas.timosalm.de/packages/20240113174550.0.0.yml
@@ -1,7 +1,7 @@
 apiVersion: data.packaging.carvel.dev/v1alpha1
 kind: Package
 metadata:
-  name: inclusion.tap-saas.timosalm.de.20240113174550.0.0+build.ce41fff
+  name: inclusion.default.tap.20231205012245.0.0
 spec:
   refName: inclusion.tap-saas.timosalm.de
   version: 20231205012245.0.0
