--- a/inclusion.tap-saas.timosalm.de/packages/20240113174550.0.0.yml
+++ b/inclusion.tap-saas.timosalm.de/packages/20240113174550.0.0.yml
@@ -3,7 +3,7 @@ kind: Package
 metadata:
   name: inclusion.default.tap.20231205012245.0.0
 spec:
-  refName: inclusion.tap-saas.timosalm.de
+  refName: inclusion.default.tap
   version: 20231205012245.0.0
   releaseNotes: |
     Release v20240113174550.0.0+build.ce41fff of package inclusion.tap-saas.timosalm.de
